# openproject-mcp-server

./: .dockerignore  .fastmcp.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  env_example.txt  openproject-mcp-sse.py  pyproject.toml  release-please-config.json  test_attachments.py  test_client_custom_fields.py  test_client_queries.py  test_client_retry.py  test_client_subresources.py  test_client_transitions.py  test_connection_tools.py  test_costs.py  test_groups.py  test_hierarchy_tools.py  test_live_integration.py  test_memberships_tools.py  test_news_integration.py  test_news_tools.py  test_news_validation.py  test_notifications.py  test_projects_tools.py  test_relations_tools.py  test_reminders.py  test_tags.py  test_time_entries_tools.py  test_users_tools.py  (+6 more)
.codex/: config.toml.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  pr-title.yml  release-please.yml  release.yml  test.yml
docs/: integration-test-setup.md
docs/guides/: how_to_generate_weekly_report.md
docs/superpowers/plans/: 2026-06-19-full-api-coverage-master-plan.md  2026-06-19-phase-0-tag-all-tools.md  2026-06-19-phase-a-ci-pytest-packaging.md  2026-06-19-phase-b-wp-subresources.md  2026-06-19-phase-c-queries.md  2026-06-20-release-please.md
docs/superpowers/specs/: 2026-06-20-release-please-design.md
scripts/: setup_test_project.py
src/: auth.py  client.py  server.py  tool_registry.py
src/tools/: attachments.py  categories.py  connection.py  costs.py  custom_actions.py  documents.py  groups.py  hierarchy.py  memberships.py  news.py  notifications.py  placeholder_users.py  projects.py  queries.py  relations.py  reminders.py  server_info.py  storages.py  time_entries.py  users.py  versions.py  views.py  watchers.py  weekly_reports.py  wiki.py  work_packages.py
src/utils/: formatting.py  report_formatter.py
tests/: test_client_subresources.py  test_hierarchy_tools.py  test_live_integration.py  test_queries.py  test_tags.py  test_time_entries_tools.py  test_tools.py
tests/integration/: conftest.py  test_attachments.py  test_categories.py  test_connection.py  test_costs.py  test_custom_actions.py  test_documents.py  test_groups.py  test_hierarchy.py  test_memberships.py  test_news.py  test_notifications.py  test_placeholder_users.py  test_preferences.py  test_projects.py  test_queries.py  test_relations.py  test_reminders.py  test_storages.py  test_time_entries.py  test_users.py  test_versions.py  test_views.py  test_watchers.py  test_weekly_reports.py  test_wiki.py  test_work_packages.py
tests/unit/: conftest.py  test_attachments.py  test_auth.py  test_client_custom_fields.py  test_client_pagination.py  test_client_retry.py  test_client_transitions.py  test_connection_tools.py  test_costs.py  test_custom_actions_tools.py  test_groups.py  test_hierarchy_tools.py  test_live_integration.py  test_memberships_tools.py  test_news_integration.py  test_news_tools.py  test_news_validation.py  test_notifications.py  test_phase_e_users.py  test_phase_fg.py  test_placeholder_users_tools.py  test_projects_tools.py  test_queries.py  test_relations_tools.py  test_reminders.py  test_server_info.py  test_tags.py  test_time_entries_tools.py  test_tool_registry.py  test_users_tools.py  test_versions_tools.py  test_watchers.py  test_weekly_reports_tools.py  test_wiki_client.py  test_wiki_tools.py  test_work_packages_tools.py
