[project]
name = "openproject-mcp-server"
version = "5.0.0"
description = "A Model Context Protocol (MCP) server for OpenProject API v3 integration"
authors = [
    {name = "Tom Gerke", email = "tom@thomasgerke.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["mcp", "openproject", "api", "project-management", "homelab", "self-hosted"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "fastmcp>=3.2.0,<4.0.0",
    "mcp>=1.0.0,<2.0.0",
    "aiohttp>=3.14.1,<4.0.0",
    "python-dotenv>=1.2.2",
    "certifi>=2022.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.24.0",
    "starlette>=1.3.1",
]

[project.scripts]
openproject-mcp = "src.server:main"


[project.urls]
Repository = "https://github.com/gerket/openproject-mcp-server"
Issues = "https://github.com/gerket/openproject-mcp-server/issues"
Changelog = "https://github.com/gerket/openproject-mcp-server/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-m 'not integration'"
markers = [
    "integration: live tests requiring OPENPROJECT_URL and OPENPROJECT_API_KEY",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/unit/test_*.py" = ["E402", "F841", "B017"]
"tests/integration/*.py" = ["E402", "F841", "B017"]
"*.legacy.py" = ["E722", "B904", "B007"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
